--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -1038,4 +1038,13 @@
   <data name="NooNewTradeOffer" xml:space="preserve">
     <value>我收到了一个新的交易报价</value>
   </data>
+  <data name="NTSteamClient" xml:space="preserve">
+    <value>, 客户端通知</value>
+  </data>
+  <data name="NtMobile" xml:space="preserve">
+    <value>, 手机应用通知</value>
+  </data>
+  <data name="NTAll" xml:space="preserve">
+    <value>, 客户端通知, 手机应用通知</value>
+  </data>
 </root>
