--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -700,7 +700,7 @@
     <value>尚未同意 ASFEnhance.EULA , 无法使用IPC功能</value>
   </data>
   <data name="EulaWarning" xml:space="preserve">
-    <value>尚未同意 EULA , 部分命令已禁用</value>
+    <value>{0}: 尚未同意 EULA , 部分命令已禁用</value>
   </data>
   <data name="ErrorLogErrorMessage" xml:space="preserve">
     <value> - 错误消息: {0}</value>
